# compgraf

./: CMakeLists.txt
resources/shaders/core/: core.vert
src/: Camera.cpp  Camera.h  Face.cpp  Face.h  Group.cpp  Group.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Obj3D.cpp  Obj3D.h  Obj3DReader.cpp  Obj3DReader.h  ScreenSaver.cpp  ScreenSaver.h  System.cpp  System.h  main.cpp
